fixed search query loop block broken style. updated verion 1.2

--- a/themes/matrix-theme/assets/css/style.css
+++ b/themes/matrix-theme/assets/css/style.css
@@ -584,7 +584,11 @@ header {
 	padding-top: 300px;
 }
 
-.is-style-front-content, .wp-block-spacer, .wp-block-post-content>*:not(.wp-block-matrix-banner-block), .wp-site-blocks>.wp-block-matrix-call-to-action-block {
+.is-style-front-content,
+.wp-block-spacer,
+.wp-block-query-loop,
+.wp-block-post-content>*:not(.wp-block-matrix-banner-block),
+.wp-site-blocks>.wp-block-matrix-call-to-action-block {
 	padding: 60px 120px;
 	background-color: #eeeeee;
 }
